--- a/public/Index.hbs
+++ b/public/Index.hbs
@@ -7,6 +7,8 @@
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <Script src="/socket.io/socket.io.js"></Script>
+    <script src='express.js'></script>
 </head>
 <body>
 
@@ -35,6 +37,15 @@
     </div>
 
    {{{body}}}
+
+   <div id='messages'>
+       <form onsubmit="return addMessage(this)">
+            <input type="text" id="username" placeholder="Nombre de Usuario">
+            <input type="text" id="texto" placeholder="Escriba su comentario...">
+            <input type="submit" value="Enviar">   
+        </form>
+
+   </div>
     
 </body>
 
