--- a/public/Index.hbs
+++ b/public/Index.hbs
@@ -5,47 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src='/express.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <Script src="/socket.io/socket.io.js"></Script>
-    <script src='express.js'></script>
+    
 </head>
 <body>
 
  
 
-    <div class="container mt-3">
-        <h1>Agregar Producto</h1>
-        <div class="jumbotron">
-            <form action="/api/guardarplantilla" method="POST">
-                <div class="form-group">
-                    <label for="title"><b>Title</b></label>
-                    <input id="title" class="form-control" type="text" name="title">
-                </div>
-                <div class="form-group">
-                    <label for="price"><b>Price</b></label>
-                    <input id="price" class="form-control" type="number" name="price">
-                </div>
-                <div class="form-group">
-                    <label for="thumbnail"><b>Thumbnail</b></label>
-                    <input id="thumbnail" class="form-control" type="text" name="thumbnail">
-                </div>
-                <button class="btn btn-success mt-3 mb-5">Enviar</button>
-            </form>
-
-        </div>
-    </div>
 
    {{{body}}}
 
-   <div id='messages'>
-       <form onsubmit="return addMessage(this)">
-            <input type="text" id="username" placeholder="Nombre de Usuario">
-            <input type="text" id="texto" placeholder="Escriba su comentario...">
-            <input type="submit" value="Enviar">   
-        </form>
 
-   </div>
+    <script src='main.js'></script>
+    
     
 </body>
 
