--- a/public/Formulario.ejs
+++ b/public/Formulario.ejs
@@ -14,6 +14,10 @@
                     <label for="thumbnail"><b>Thumbnail</b></label>
                     <input id="thumbnail" class="form-control" type="url" name="thumbnail">
                 </div>
+                <div class="form-group">
+                    <label for="stock"><b>Stock</b></label>
+                    <input id="stock" class="form-control" type="number" name="stock">
+                </div>
                 <button class="btn btn-success mt-3 mb-5">Enviar</button>
             </form>
 
