--- a/public/UsuarioLogeado.ejs
+++ b/public/UsuarioLogeado.ejs
@@ -1,6 +1,6 @@
 <div>
     <h1><% nombre %></h1>
-    <form action="/api/Logout" method="GET">
+    <form action="/api/logout" method="GET">
     <button class="btn btn-danger mt-3 mb-5">Cerrar sesion</button>
     </form>
 </div>
