--- a/public/Login.ejs
+++ b/public/Login.ejs
@@ -12,7 +12,7 @@
   <div class="container mt-3 p-5">
     <div class="jumbotron">
       
-          <form action="/api/Login/guardar" method="POST">
+          <form action="/api/login/guardar" method="POST">
               <label for="title"><b>Nombre</b></label>
               <input id="name" class="form-control" type="text" placeholder="name"/>
               <button class="btn btn-success mt-3 mb-5">Enviar</button>
