--- a/public/Login.ejs
+++ b/public/Login.ejs
@@ -13,8 +13,8 @@
     <div class="jumbotron">
       
           <form action="/api/login/guardar" method="POST">
-              <label for="title"><b>Nombre</b></label>
-              <input id="name" class="form-control" type="text" placeholder="name"/>
+              <label for="name"><b>Nombre</b></label>
+              <input name="name" class="form-control" type="text" placeholder="name"/>
               <button class="btn btn-success mt-3 mb-5">Enviar</button>
         
           </form>
