--- a/public/Registro.ejs
+++ b/public/Registro.ejs
@@ -12,22 +12,22 @@
   <div class="container mt-3 p-5">
     <div class="jumbotron">
       
-          <form action="/api/login/guardar" method="POST">
+          <form action="/api/registro/guardar" method="POST">
             <div class="form-group">
-              <label for="name"><b>Nombre</b></label>
-              <input name="name" class="form-control" type="text" placeholder="name"/>
+              <label for="nombre"><b>Nombre</b></label>
+              <input name="nombre" class="form-control" type="text" placeholder="nombre"/>
             </div>
             <div class="form-group">
-              <label for="constraseña"><b>Constraseña</b></label>
-              <input name="constraseña" class="form-control" type="password" placeholder="constraseña"/>
+              <label for="email"><b>Correo Electronico</b></label>
+              <input name="email" class="form-control" type="text" placeholder="email"/>
+            </div> 
+            <div class="form-group">
+              <label for="contraseña"><b>Contraseña</b></label>
+              <input name="contraseña" class="form-control" type="password" placeholder="contraseña"/>
               <button class="btn btn-success mt-3 mb-5">Enviar</button>
-            </div>
-            </form>
-            <div class="form-group">
-            <form action="/api/registro" method="GET">
-            <button class="btn btn-success mt-3 mb-5">Registrarse</button>
-            </form>
-            </div>
+            </div>  
+        
+          </form>
       </div>
     </div>
 
