--- a/public/UsuarioLogeado.ejs
+++ b/public/UsuarioLogeado.ejs
@@ -1,5 +1,5 @@
-<div>
-    <h1><%nombre%></h1>
+<div  class="container mt-3">
+    <h1>Bienvenido <%-nombre-%> !</h1>
     <form action="/api/logout" method="GET">
     <button class="btn btn-danger mt-3 mb-5">Cerrar sesion</button>
     </form>
