--- a/public/Formulario.ejs
+++ b/public/Formulario.ejs
@@ -6,7 +6,7 @@
                     <label for="title"><b>Title</b></label>
                     <input id="title" class="form-control" type="text" name="title">
                 </div>
-                <div class="form-group">
+           <div class="form-group"></div>     <div class="form-group">
                     <label for="price"><b>Price</b></label>
                     <input id="price" class="form-control" type="number" name="price">
                 </div>
