--- a/public/Registro.ejs
+++ b/public/Registro.ejs
@@ -25,7 +25,13 @@
               <label for="contraseña"><b>Contraseña</b></label>
               <input name="contraseña" class="form-control" type="password" placeholder="contraseña"/>
               <button class="btn btn-success mt-3 mb-5">Enviar</button>
-            </div>  
+            </div>
+            </form>
+            <div class="form-group">
+            <form action="/api/login" method="GET">
+            <button class="btn btn-success mt-3 mb-5">Login</button>
+            </form>
+              </div>
         
           </form>
       </div>
