--- a/public/Login-error.ejs
+++ b/public/Login-error.ejs
@@ -11,6 +11,11 @@
 <body>
   <div class="container mt-3 p-5">
     <h1>Error de Credenciales</h1>
+    <div class="form-group">
+      <form action="/api/login" method="GET">
+      <button class="btn btn-success mt-3 mb-5">Volver al login</button>
+      </form>
+      </div>
     </div>
 
 <script src="/server.js"></script>
