--- a/public/Registro.ejs
+++ b/public/Registro.ejs
@@ -18,8 +18,8 @@
               <input name="nombre" class="form-control" type="text" placeholder="nombre"/>
             </div>
             <div class="form-group">
-              <label for="email"><b>Correo Electronico</b></label>
-              <input name="email" class="form-control" type="text" placeholder="email"/>
+              <label for="correo"><b>Correo Electronico</b></label>
+              <input name="correo" class="form-control" type="text" placeholder="correo"/>
             </div> 
             <div class="form-group">
               <label for="contraseña"><b>Contraseña</b></label>
