--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -5,7 +5,7 @@
     <hr> 
     <div id="messages"></div>
     
-        <form class="form-inline" onsubmit="return addMessage(this)" autocomplete="off">
+        <form class="form-inline" onsubmit="return addMessage(this)">
                 <input type="text" class="form-control my-2 mr-2" id="username" placeholder="Correo Electronico" >
                 <input type="text" class="form-control my-2 mr-2" id="texto" placeholder="Escriba su comentario...">
                 <input type="submit" class="btn btn-success" value="Enviar">
