--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -15,8 +15,8 @@
       
           <form action="/api/login" method="POST">
             <div class="form-group">
-              <label for="nombre"><b>Nombre</b></label>
-              <input name="nombre" class="form-control" type="text" placeholder="nombre"/>
+              <label for="email"><b>Correo-Electronico</b></label>
+              <input name="email" class="form-control" type="text" placeholder="email"/>
             </div>
             <div class="form-group">
               <label for="contraseña"><b>Contraseña</b></label>
