--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -3,7 +3,9 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="../server.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src='./main.js'></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,8 +23,6 @@
     <%- include('./chat')-%>
 
     </div>  
-    <script src='/main.js'></script>
-    <script src="/server.js"></script>
     
 </body>
 </html>
