--- a/views/UsuarioLogeado.ejs
+++ b/views/UsuarioLogeado.ejs
@@ -3,7 +3,7 @@
     <form action="/api/logout" method="GET">
     <button class="btn btn-danger mt-3 mb-5">Cerrar sesion</button>
     </form>
-    <% if(carrito.length>0){ %>
+    <% if(carrito && carrito.length>0){ %>
         <form action="/api/carrito" method="GET">
         <button class="btn btn-secondary mt-3 mb-5">Ver Carrito</button>
         </form>
